--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio Renan J Paula</title>
+    <title>Portifólio Cauã Wendel</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -31,17 +31,17 @@
             <img src="assets/img/my-photo.png" alt="Foto de Perfil" class="photo" id="profile.photo">
 
             <h1 class="title">
-                Olá, <br>eu sou <span id="profile.name">Carregando...</span>
+                Olá, <br>eu sou <span id="profile.name">Cauã Wendel</span>
             </h1>
 
             <div class="information">
-                <p class="job" id="profile.job">Carregando...</p>
-                <p class="location" id="profile.location">Carregando...</p>
+                <p class="job" id="profile.job">junior developer</p>
+                <p class="location" id="profile.location">Rio de Janeiro - RJ</p>
                 <p class="phone">
-                    <a href="tel:(16) 9 9999-9999" id="profile.phone">Carregando...</a>
+                    <a href="tel:(21) 97668-5130" id="profile.phone">(21) 97668-5130</a>
                 </p>
                 <p class="email">
-                    <a href="mailto:ex@mail.com" id="profile.email">carregando@mail.com</a>
+                    <a href="mailto:cauawendell4@gmail.com" id="profile.email">cauawendell4@gmail.com</a>
                 </p>
             </div>
         </header>
@@ -56,15 +56,35 @@
                     <section class="tools">
                         <h3>Ferramentas:</h3>
                         <ul id="profile.skills.hardSkills">
+                            <li>
+                                <img src="/data/imgs/nodejs.png" alt="nodeJS" title="nodeJS">
+                            </li>
+                            <li>
+                                <img src="/data/imgs/python.png" alt="nodeJS" title="nodeJS">
+                            </li>
+                            <li>
+                                <img src="/data/imgs/js.png" alt="javaScript" title="javaScript">
+                            </li>
+                            <li>
+                                <img src="/data/imgs/git.png" alt="react" title="react">
+                            </li>
+                            <li>
+                                <img src="/data/imgs/css.png" alt="css" title="css">
+                            </li>
+                            <li>
+                                <img src="/data/imgs/html.png" alt="css" title="css">
+                            </li>
                         </ul>
                     </section>
 
                     <section class="personal">
                         <h3>Pessoal:</h3>
                         <ul id="profile.skills.softSkills">
-                            <li>Carregando...</li>
-                            <li>Carregando...</li>
-                            <li>Carregando...</li>
+                            <li>Liderança</li>
+                            <li>Facilidade de comunicação</li>
+                            <li>Organizaçao</li>
+                            <li>Trabalho em equipe</li>
+                            <li>Flexibilidade</li>
                         </ul>
                     </section>
                 </div>
@@ -75,10 +95,12 @@
             <button class="trigger" type="button">
                 <h2>Idiomas</h2>
             </button>
-
             <div class="content">
                 <ul class="languages" id="profile.languages">
-                    <li>Carregando...</li>
+                    <li>Portugues</li>
+                    <li>Ingles</li>
+                    <li>Espanhol</li>
+                    <li>Japones</li>
                 </ul>
             </div>
         </section>
@@ -90,17 +112,36 @@
 
             <div class="content">
                 <ul class="portfolio" id="profile.portfolio">
+                    <h3 class="title github">criando uma pokedex</h3>
+                    <li>
+                        <a href="https://github.com/cwmec/js-developer-pokedex" target="_blank">https://github.com/cwmec/js-developer-pokedex</a>
+                    </li>
                 </ul>
             </div>
         </section>
 
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2>Experiência Profissional</h2>
+                <h2>formação</h2>
             </button>
 
             <div class="content">
                 <ul class="experience" id="profile.professionalExperience">
+                    <li>
+                        <h3 class="title">Graduação analise e desenvolvimento de sistemas</h3>
+                        <p class="period">fevereiro 2023 - em curso</p>
+                        <p>
+                            Está sendo um grande prazer fazer parte de uma familia tão grande e gentil!                      
+                        </p>
+                        
+                    </li>
+                    <li>
+                        <h3 class="title">Colegio santa monica centro educacional</h3>
+                        <p class="period">2020-2022 - current</p>
+                        <p>
+                            Foi um grande prazer fazer parte desta escola fantástica e poder contribuir com a transformação de tantas vidas.
+                        </p>
+                    </li>
                 </ul>
             </div>
         </section>
