--- a/index.html
+++ b/index.html
@@ -157,5 +157,5 @@
     <script src="assets/js/api.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
-
+<!-- feito com a ajuda do Professor Renan!-->
 </html>
